--- a/webapp/templates/layout.jinja
+++ b/webapp/templates/layout.jinja
@@ -11,12 +11,27 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
     <title>Rusty Command Center {% block title %}{% endblock %}</title>
+    {% block head %}{% endblock %}
 </head>
 <body hx-boost="true" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+{% block header %}
+    <header class="container">
+        <nav>
+            <ul>
+                <li>Rusty Command Center</li>
+            </ul>
+            <ul>
+                <li><a href="#" hx-post="{% url 'logout' %}" hx-target="body">Logout</a></li>
+            </ul>
+
+        </nav>
+    </header>
+{% endblock %}
 <main class="container">
     {% block main %}
         Update block main!
     {% endblock %}
 </main>
+
 </body>
 </html>
