--- a/webapp/templates/layout.jinja
+++ b/webapp/templates/layout.jinja
@@ -23,6 +23,7 @@
             <ul>
                 <li><a href="{% url "dashboard" %}">Dashboard</a></li>
                 <li><a href="{% url "calendar" %}">Calendar</a></li>
+                <li><a href="{% url "meal-plan" %}">Meal Plan</a></li>
                 <li>{% include "weather_widget.jinja" %}</li>
                 {#                <li><a href="#" hx-post="{% url 'logout' %}" hx-target="body">Logout</a></li>#}
             </ul>
