Fix meal dashboard

--- a/webapp/templates/dashboard_meals.jinja
+++ b/webapp/templates/dashboard_meals.jinja
@@ -9,11 +9,11 @@
         </tr>
         <tr>
             <th><strong>Lunch</strong></th>
-            <th>{{ meals.Lunch }}</th>
+            <th>{{ meals.lunch }}</th>
         </tr>
         <tr>
             <th><strong>Breakfast</strong></th>
-            <th>{{ meals.Dinner }}</th>
+            <th>{{ meals.dinner }}</th>
         </tr>
     </table>
 {% endblock %}
