--- a/webapp/templates/dashboard_meals.jinja
+++ b/webapp/templates/dashboard_meals.jinja
@@ -12,7 +12,7 @@
             <th>{{ meals.lunch }}</th>
         </tr>
         <tr>
-            <th><strong>Breakfast</strong></th>
+            <th><strong>Dinner</strong></th>
             <th>{{ meals.dinner }}</th>
         </tr>
     </table>
